<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020 Kolibree. All rights reserved
  ~
  ~ Copying this file via any medium without the prior written consent of Kolibree is strictly
  ~ prohibited
  ~
  ~ Proprietary and confidential
  -->

<merge xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

  <RelativeLayout
    android:id="@+id/checkup_mouth_map_section"
    android:layout_width="match_parent"
    android:layout_height="@dimen/match_constraints"
    android:paddingTop="@dimen/dot"
    app:layout_constraintBottom_toTopOf="@+id/checkup_legend"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
      android:id="@+id/checkup_left"
      style="@style/Widget.TextView.MouthMapSideIndicator"
      android:layout_alignParentStart="true"
      android:layout_centerVertical="true"
      android:layout_marginStart="@dimen/dot_quad"
      android:text="@string/checkup_mouth_map_left"
      tools:ignore="RtlHardcoded" />

    <TextView
      android:id="@+id/checkup_right"
      style="@style/Widget.TextView.MouthMapSideIndicator"
      android:layout_alignParentEnd="true"
      android:layout_centerVertical="true"
      android:layout_marginEnd="@dimen/dot_quad"
      android:text="@string/checkup_mouth_map_right"
      tools:ignore="RtlHardcoded" />

    <com.kolibree.android.jaws.hum.HumJawsView
      android:id="@+id/checkup_mouth_map"
      android:layout_width="@dimen/match_constraints"
      android:layout_height="@dimen/last_brushing_mouthmap_height"
      android:layout_centerVertical="true"
      android:layout_toStartOf="@id/checkup_right"
      android:layout_toEndOf="@id/checkup_left"/>

    <ImageView
      android:id="@+id/checkup_touch"
      android:layout_width="@dimen/dot_quin"
      android:layout_height="@dimen/dot_sev"
      android:layout_centerInParent="true"
      android:paddingEnd="@dimen/dot"
      android:scaleType="fitCenter"
      android:src="@drawable/ic_move_jaws"
      tools:ignore="ContentDescription,RtlSymmetry" />

    <TextView
      android:id="@+id/checkup_mouth_map_no_data_caption"
      style="@style/Widget.CardView"
      android:layout_width="@dimen/last_brushing_mouthmap_size"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:background="@color/white"
      android:elevation="2dp"
      android:gravity="center"
      android:padding="@dimen/dot"
      android:text="@string/checkup_no_mouthmap_data"
      android:textAppearance="@style/TextAppearance.Subtitle2"
      android:textColor="?android:textColorPrimary"
      tools:cardElevation="2dp" />

    <TextView
      android:id="@+id/checkup_manual_brushing_caption"
      style="@style/Widget.CardView"
      android:layout_width="@dimen/last_brushing_mouthmap_size"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:background="@color/white"
      android:elevation="2dp"
      android:gravity="center"
      android:padding="@dimen/dot"
      android:text="@string/checkup_manual_brushing_placeholder"
      android:textAppearance="@style/TextAppearance.Subtitle2"
      android:textColor="?android:textColorPrimary"
      tools:cardElevation="2dp" />

  </RelativeLayout>

  <LinearLayout
    android:id="@+id/checkup_legend"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/dot_double"
    android:orientation="horizontal"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <TextView
      style="@style/Widget.TextView.Legend"
      android:layout_marginStart="@dimen/dot_trip"
      android:text="@string/checkup_clean"
      app:drawableStartCompat="@drawable/ic_chart_legend_dot_white" />

    <TextView
      android:id="@+id/checkup_missed_legend"
      style="@style/Widget.TextView.Legend"
      android:layout_marginStart="@dimen/dot_double"
      android:text="@string/checkup_missed" />
  </LinearLayout>
</merge>
