...
just turn off the brush."</string>
    <string name="test_brushing_start_brushing_header">"start brushing normally and turn your brush off when done."</string>
    <string name="test_brushing_start_brushing_highlight">"."</string>
    <string name="orphan_brushings_delete_title">"Are you sure?"</string>
    <string name="orphan_brushings_delete_message">"Do you really want to delete these brushings? This action is irreversible."</string>
    <string name="um_no">"No"</string>
    <string name="um_yes">"Yes"</string>
    <string name="last_brushing_card_brushing_description">"%s %s at %s"</string>
    <string name="last_brushing_card_offline_brushing">"Offline brushing"</string>
    <string name="last_brushing_card_guided_brushing">"Guided brushing"</string>
    <string name="activities_task_points">"+%s pts"</string>
    <string name="activities_task_test_brushing_title">"What's your brushing style?"</string>
    <string name="activities_task_test_brushing_description">"Missing a spot - or two, or three? Racing through it? Let's test how you brush."</string>
...
    <string name="last_brushing_delete_button">"Delete brushing session"</string>
    <string name="profile_stats_card_offline_label">"Without using the app"</string>
    <string name="profile_stats_card_inapp_label">"Following an activity"</string>
    <string name="pairing_blink_toothbrush_led">"Blink"</string>
    <string name="settings_item_logout">"Log out"</string>
    <string name="checkup_coverage">"Coverage"</string>
    <string name="checkup_duration">"Duration"</string>
    <string name="checkup_no_mouthmap_data">"Start brushing to see your results."</string>
    <string name="checkup_mouth_map_left">"L"</string>
    <string name="checkup_mouth_map_right">"R"</string>
    <string name="checkup_clean">"Clean"</string>
    <string name="checkup_missed">"Missed"</string>
    <string name="pairing_no_brush_dialog_title">"you don’t see your toothbrush?"</string>
...
